[workspace.package]
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/identity.rs"
rust-version = "1.65"

[workspace]
resolver = "2"
members = [
  "identity_core",
  "identity_credential",
  "identity_did",
  "identity_document",
  "identity_iota",
  "identity_storage",
  "identity_iota_core",
  "identity_resolver",
  "identity_verification",
  "identity_stronghold",
  "identity_jose",
  "identity_ecdsa_verifier",
  "identity_eddsa_verifier",
  "examples",
]

exclude = ["bindings/wasm/identity_wasm", "bindings/grpc"]

[workspace.dependencies]
bls12_381_plus = { version = "0.8.17" }
iota_interaction = { git = "https://github.com/iotaledger/product-core.git", branch = "chore/extend-tx-client-core", package = "iota_interaction" }
iota_interaction_ts = { git = "https://github.com/iotaledger/product-core.git", branch = "chore/extend-tx-client-core", package = "iota_interaction_ts" }
product_common = { git = "https://github.com/iotaledger/product-core.git", branch = "chore/extend-tx-client-core", package = "product_common" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false }
strum = { version = "0.25", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0", default-features = false }
json-proof-token = { version = "0.3.5" }
zkryptium = { version = "0.2.2", default-features = false, features = ["bbsplus"] }

# Uncomment the following patch if you need to use a local `product-core` repository for development purposes.
# IMPORTANT: Do not forget to comment out the patch before creating your PR.
#[patch."https://github.com/iotaledger/product-core.git"]
#iota_interaction = { version = "1.6.0-alpha", path = "../product-core/iota_interaction" }
#iota_interaction_rust = { version = "1.6.0-alpha", path = "../product-core/iota_interaction_rust" }
#iota_interaction_ts = { version = "1.6.0-alpha", path = "../product-core/bindings/wasm/iota_interaction_ts" }
#product_common = { version = "1.6.0-alpha", path = "../product-core/product_common" }

[workspace.lints.clippy]
result_large_err = "allow"
large_enum_variant = "allow"

[profile.release.package.iota_interaction_ts]
opt-level = 's'
# Enabling debug for profile.release may lead to more helpful logged call stacks.
# TODO: Clarify if 'debug = true' facilitates error analysis via console logs.
#       If not, remove the next line
#       If yes, describe the helping effect in the comment above
# debug = true
