[package]
name = "did_schema"
version = "0.1.0"
authors = ["IOTA Identity"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/iotaledger/identity.rs"
license = "Apache-2.0"
keywords = ["iota", "tangle", "identity"]
homepage = "https://www.iota.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
