[package]
name = "examples"
version = "1.0.0"
authors = ["IOTA Stiftung"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
identity_eddsa_verifier = { path = "../identity_eddsa_verifier", default-features = false }
identity_iota = { path = "../identity_iota", default-features = false, features = ["memstore", "domain-linkage"] }
identity_stronghold = { path = "../identity_stronghold", default-features = false }
iota-sdk = { version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
primitive-types = "0.12.1"
rand = "0.8.5"
tokio = { version = "1.29", default-features = false, features = ["rt"] }

[lib]
path = "utils/utils.rs"

[[example]]
path = "0_basic/0_create_did.rs"
name = "0_create_did"

[[example]]
path = "0_basic/1_update_did.rs"
name = "1_update_did"

[[example]]
path = "0_basic/2_resolve_did.rs"
name = "2_resolve_did"

[[example]]
path = "0_basic/3_deactivate_did.rs"
name = "3_deactivate_did"

[[example]]
path = "0_basic/4_delete_did.rs"
name = "4_delete_did"

[[example]]
path = "0_basic/5_create_vc.rs"
name = "5_create_vc"

[[example]]
path = "0_basic/6_create_vp.rs"
name = "6_create_vp"

[[example]]
path = "0_basic/7_revoke_vc.rs"
name = "7_revoke_vc"

[[example]]
path = "0_basic/8_stronghold.rs"
name = "8_stronghold"

[[example]]
path = "1_advanced/0_did_controls_did.rs"
name = "0_did_controls_did"

[[example]]
path = "1_advanced/1_did_issues_nft.rs"
name = "1_did_issues_nft"

[[example]]
path = "1_advanced/2_nft_owns_did.rs"
name = "2_nft_owns_did"

[[example]]
path = "1_advanced/3_did_issues_tokens.rs"
name = "3_did_issues_tokens"

[[example]]
path = "1_advanced/4_alias_output_history.rs"
name = "4_alias_output_history"

[[example]]
path = "1_advanced/5_custom_resolution.rs"
name = "5_custom_resolution"

[[example]]
path = "1_advanced/6_domain_linkage.rs"
name = "6_domain_linkage"
