[package]
name = "examples"
version = "1.6.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
identity_eddsa_verifier = { path = "../identity_eddsa_verifier", default-features = false, features = ["ed25519"] }
identity_storage = { path = "../identity_storage" }
identity_stronghold = { path = "../identity_stronghold", default-features = false, features = ["send-sync-storage"] }
iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v0.11.6-rc" }
iota-sdk-legacy = { package = "iota-sdk", version = "1.0", default-features = false, features = ["tls", "client", "stronghold"] }
json-proof-token.workspace = true
rand = "0.8.5"
sd-jwt-payload = { version = "0.2.1", default-features = false, features = ["sha"] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0" }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.43", default-features = false, features = ["rt", "macros"] }

[dependencies.identity_iota]
path = "../identity_iota"
default-features = false
features = [
  "domain-linkage",
  "jpt-bbs-plus",
  "iota-client",
  "send-sync-storage",
  "memstore",
  "resolver",
  "revocation-bitmap",
  "sd-jwt",
  "status-list-2021",
  "keytool",
]

[lib]
path = "utils/utils.rs"

[[example]]
path = "0_basic/0_create_did.rs"
name = "0_create_did"

[[example]]
path = "0_basic/1_update_did.rs"
name = "1_update_did"

[[example]]
path = "0_basic/2_resolve_did.rs"
name = "2_resolve_did"

[[example]]
path = "0_basic/3_deactivate_did.rs"
name = "3_deactivate_did"

[[example]]
path = "0_basic/4_delete_did.rs"
name = "4_delete_did"

[[example]]
path = "0_basic/5_create_vc.rs"
name = "5_create_vc"

[[example]]
path = "0_basic/6_create_vp.rs"
name = "6_create_vp"

[[example]]
path = "0_basic/7_revoke_vc.rs"
name = "7_revoke_vc"

[[example]]
path = "0_basic/8_legacy_stronghold.rs"
name = "8_legacy_stronghold"

[[example]]
path = "1_advanced/4_identity_history.rs"
name = "4_identity_history"

[[example]]
path = "1_advanced/5_custom_resolution.rs"
name = "5_custom_resolution"

[[example]]
path = "1_advanced/6_domain_linkage.rs"
name = "6_domain_linkage"

[[example]]
path = "1_advanced/7_sd_jwt.rs"
name = "7_sd_jwt"

[[example]]
path = "1_advanced/8_status_list_2021.rs"
name = "8_status_list_2021"

[[example]]
path = "1_advanced/9_zkp.rs"
name = "9_zkp"

[[example]]
path = "1_advanced/10_zkp_revocation.rs"
name = "10_zkp_revocation"

[[example]]
path = "1_advanced/11_linked_verifiable_presentation.rs"
name = "11_linked_verifiable_presentation"

[[example]]
path = "1_advanced/13_iota_keytool_integration.rs"
name = "13_iota_keytool_integration"
