[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
identity_core = { path = "../identity_core" }
identity_did = { path = "../identity_did" }
identity_stardust = { path = "../identity_stardust" }
iota-client = { version = "2.0.0-beta.2", default-features = false, features = ["tls"] }
primitive-types = "0.11.1"
tokio = "1.20.1"

# TODO: Integrate into parent workspace after legacy refactor.
[workspace]

[lib]
path = "utils/utils.rs"

[[example]]
path = "crud/0_create_did.rs"
name = "0_create_did"

[[example]]
path = "crud/1_update_did.rs"
name = "1_update_did"

[[example]]
path = "crud/2_resolve_did.rs"
name = "2_resolve_did"

[[example]]
path = "crud/3_deactivate_did.rs"
name = "3_deactivate_did"

[[example]]
path = "crud/4_delete_did.rs"
name = "4_delete_did"

[[example]]
path = "advanced/5_did_controls_did.rs"
name = "5_did_controls_did"

[[example]]
path = "advanced/6_did_issues_nft.rs"
name = "6_did_issues_nft"

[[example]]
path = "advanced/7_nft_owns_did.rs"
name = "7_nft_owns_did"

[[example]]
path = "advanced/8_did_issues_tokens.rs"
name = "8_did_issues_tokens"
