[package]
name = "examples"
version = "0.6.0"
authors = ["IOTA Stiftung"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
identity_core = { path = "../identity_core" }
identity_did = { path = "../identity_did" }
identity_stardust = { path = "../identity_stardust" }
iota-client = { version = "2.0.0-beta.2", default-features = false, features = ["tls", "stronghold"] }
primitive-types = "0.11.1"
tokio = "1.20.1"

[lib]
path = "utils/utils.rs"

[[example]]
path = "0_crud/00_create_did.rs"
name = "00_create_did"

[[example]]
path = "0_crud/01_update_did.rs"
name = "01_update_did"

[[example]]
path = "0_crud/02_resolve_did.rs"
name = "02_resolve_did"

[[example]]
path = "0_crud/03_deactivate_did.rs"
name = "03_deactivate_did"

[[example]]
path = "0_crud/04_delete_did.rs"
name = "04_delete_did"

[[example]]
path = "1_advanced/05_did_controls_did.rs"
name = "05_did_controls_did"

[[example]]
path = "1_advanced/06_did_issues_nft.rs"
name = "06_did_issues_nft"

[[example]]
path = "1_advanced/07_nft_owns_did.rs"
name = "07_nft_owns_did"

[[example]]
path = "1_advanced/08_did_issues_tokens.rs"
name = "08_did_issues_tokens"
