[package]
name = "examples"
version = "0.6.0"
authors = ["IOTA Stiftung"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.62"
identity_core = { path = "../identity_core" }
identity_did = { path = "../identity_did" }
identity_stardust = { path = "../identity_stardust" }
iota-client = { version = "2.0.0-beta.2", default-features = false, features = ["tls", "stronghold"] }
primitive-types = "0.11.1"
tokio = "1.20.1"

[lib]
path = "utils/utils.rs"

[[example]]
path = "0_crud/0_create_did.rs"
name = "0_create_did"

[[example]]
path = "0_crud/1_update_did.rs"
name = "1_update_did"

[[example]]
path = "0_crud/2_resolve_did.rs"
name = "2_resolve_did"

[[example]]
path = "0_crud/3_deactivate_did.rs"
name = "3_deactivate_did"

[[example]]
path = "0_crud/4_delete_did.rs"
name = "4_delete_did"

[[example]]
path = "1_advanced/0_did_controls_did.rs"
name = "0_did_controls_did"

[[example]]
path = "1_advanced/1_did_issues_nft.rs"
name = "1_did_issues_nft"

[[example]]
path = "1_advanced/2_nft_owns_did.rs"
name = "2_nft_owns_did"

[[example]]
path = "1_advanced/3_did_issues_tokens.rs"
name = "3_did_issues_tokens"
