[package]
name = "flat-enum-derive"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
publish = false

[lib]
name = "flat_enum_derive"
proc-macro = true

[features]
default = []
wasm = []

[dependencies]
proc-macro-error = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", features = ["extra-traits", "parsing", "derive"] }
