[package]
name = "flat-enum"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
publish = false

[features]
default = ["derive"]
derive = ["flat-enum-derive"]
wasm = ["flat-enum-derive/wasm"]

[dependencies]
flat-enum-derive = { version = "0.1", default-features = false, path = "../flat-enum-derive", optional = true }
serde = { version = "1.0", default-features = false }
