[package]
name = "flat_error"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flat_error"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
serde = { version = "1.0" }
syn = { version = "1.0", features = ["extra-traits", "parsing", "derive"] }
