[package]
name = "identity-account"
version = "0.5.0-dev.4"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "Secure storage for Decentralized Identifiers and Verifiable Credentials."

[dependencies]
identity-account-storage = { version = "=0.5.0-dev.4", path = "../identity-account-storage", default-features = false }
identity-core = { version = "=0.5.0-dev.4", path = "../identity-core" }
identity-credential = { version = "=0.5.0-dev.4", path = "../identity-credential" }
identity-did = { version = "=0.5.0-dev.4", path = "../identity-did" }
identity-iota = { version = "=0.5.0-dev.4", path = "../identity-iota", default-features = false }
identity-iota-core = { version = "=0.5.0-dev.4", path = "../identity-iota-core", default-features = false }
log = { version = "0.4", default-features = false }
paste = { version = "1.0" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
strum = { version = "0.24.0", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0" }
zeroize = { version = "1.4", optional = true }

[dependencies.iota-crypto]
version = "0.7"
features = ["blake2b", "ed25519", "hmac", "pbkdf", "sha", "slip10", "std"]

[dev-dependencies]
futures = { version = "0.3" }
rand = { version = "0.8" }
rusty-fork = { version = "0.3" }
tokio = { version = "1.14", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[features]
default = ["stronghold", "async", "send-sync-storage"]
mem-client = []
stronghold = ["identity-account-storage/stronghold", "zeroize"]
async = ["identity-iota/async"]
send-sync-storage = ["identity-account-storage/send-sync-storage"]
