[package]
name = "identity-account"
version = "0.5.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "Secure storage for Decentralized Identifiers and Verifiable Credentials."

[dependencies]
identity-account-storage = { version = "=0.5.0", path = "../identity-account-storage", default-features = false }
identity-core = { version = "=0.5.0", path = "../identity-core", default-features = false }
identity-credential = { version = "=0.5.0", path = "../identity-credential", default-features = false }
identity-did = { version = "=0.5.0", path = "../identity-did", default-features = false }
identity-iota = { version = "=0.5.0", path = "../identity-iota", default-features = false }
identity-iota-core = { version = "=0.5.0", path = "../identity-iota-core", default-features = false }
log = { version = "0.4", default-features = false }
paste = { version = "1.0" }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
strum = { version = "0.24.0", default-features = false, features = ["std", "derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
futures = { version = "0.3" }
rusty-fork = { version = "0.3" }
tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync"] }

[features]
default = ["stronghold", "async", "send-sync-storage", "encryption"]
mem-client = []
stronghold = ["identity-account-storage/stronghold"]
async = ["identity-iota/async"]
send-sync-storage = ["identity-account-storage/send-sync-storage"]
# Enables encryption and decryption functionality.
encryption = ["identity-account-storage/encryption"]
