[package]
name = "identity-actor"
version = "0.5.0-dev.4"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "A peer-to-peer identity communication framework"

[dependencies]
async-trait = { version = "0.1", default-features = false }
dashmap = { version = "5.1", default-features = false }
futures = { version = "0.3", default-features = false }
identity-account = { path = "../identity-account", default-features = false, optional = true }
identity-core = { path = "../identity-core", default-features = false }
identity-iota = { path = "../identity-iota", default-features = false }
libp2p = { version = "0.42", default-features = false, features = ["tcp-tokio", "dns-tokio", "websocket", "request-response", "noise", "yamux"] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.17", default-features = false, features = ["rt"] }
uuid = { version = "0.8", default-features = false, features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.3", default-features = false, features = ["stable"] }
pretty_env_logger = { version = "0.4", default-features = false }

[[bench]]
name = "benchmark"
harness = false

[features]
account = ["identity-account/mem-client", "identity-account/async"]
default = ["account"]
