[package]
name = "identity-actor"
version = "0.5.0"
authors = ["IOTA Stiftung"]
edition = "2021"
homepage = "https://www.iota.org"
keywords = ["iota", "tangle", "identity"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/iotaledger/identity.rs"
description = "A peer-to-peer identity communication framework"

[dependencies]
async-trait = { version = "0.1", default-features = false }
cfg-if = { version = "1.0", default-features = false }
dashmap = { version = "5.1", default-features = false }
futures = { version = "0.3", default-features = false }
identity-account = { path = "../identity-account", default-features = false, features = ["send-sync-storage"], optional = true }
identity-comm = { path = "../identity-comm", default-features = false }
identity-core = { path = "../identity-core", default-features = false }
identity-did = { path = "../identity-did", default-features = false }
identity-iota = { path = "../identity-iota", default-features = false }
identity-iota-core = { path = "../identity-iota-core", default-features = false }
libp2p = { version = "0.43", default-features = false, features = ["tcp-tokio", "dns-tokio", "websocket", "request-response", "noise", "yamux"] }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.15", default-features = false, features = ["rt", "time"] }
uuid = { version = "0.8", default-features = false, features = ["v4", "serde"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
libp2p = { version = "*", features = ["wasm-bindgen", "wasm-ext", "wasm-ext-websocket"] }
uuid = { version = "*", features = ["wasm-bindgen"] }
wasm-bindgen-futures = { version = "0.4.29", default-features = false }

[dev-dependencies]
criterion = { version = "0.3", default-features = false, features = ["stable"] }
pretty_env_logger = { version = "0.4", default-features = false }

[[bench]]
name = "benchmark"
harness = false

[features]
account = ["identity-account/mem-client", "identity-account/async"]
# A feature that exposes lower-level building blocks of the actor,
# intended for bindings, but not for general use.
# Changes to types exposed under this feature are **not** covered by semver.
primitives = []
default = ["account"]
